better openapi management
